--- a/web-frontend/src/register.css
+++ b/web-frontend/src/register.css
@@ -1,14 +1,31 @@
-body{
-    /* background-color: rgb(0, 74, 74); */
+.register{
+    
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 2rem;
     color: white;
+    height: 100vh;
     background-image: url('https://i.redd.it/d2hd73xxwvaa1.jpg');
     background-size: cover;
     background-position: fixed;
 }
+.d1{
+   display: flex;
+   justify-content: center;
+   margin-top: 60px;
+}
+.mb-2,.link, .hh{
+   font-size: smaller;
+}
+.link, .hh{
+    margin-top: 7px;
+}
 .form{
     background-color: rgba(0, 0, 0, 0.669);
     box-shadow: 1px 1px 4px white;
-    padding: 32px 34px;
+    padding: 30px 32px;
+    width: 30%;
+    text-align: center;
 }
 .btn{
     background-color: rgb(17, 228, 158);
@@ -19,18 +36,10 @@ body{
     background-color: rgb(3, 126, 85);
     color: white;
 }
-.btn2{
-    background-color: rgb(3, 99, 112);
-    border: none;
-    color: black;
-    margin-left: 5px;
-}
-.btn2:hover{
-    background-color: aqua;
-}
+
 .link{
     color: white;
 }
 .link:hover{
-   color: black;
+   color: rgb(6, 176, 176);
 }
