--- a/web-frontend/src/news.css
+++ b/web-frontend/src/news.css
@@ -1,3 +1,27 @@
-/* .mb-3{
-   width: 60%;
-} */
+.search{
+   position: absolute;
+   top: 15px;
+   display: flex;
+   flex-direction: row;
+   left: 470px;
+}
+.btn5{
+   margin-left: 5px;
+   background-color: transparent;
+   color: white;
+}
+.btn5:hover{
+   background-color: rgba(83, 85, 92, 0.717);
+}
+.b{
+   color: white;
+}
+.btn6{
+   background-color: transparent;
+   color: white;
+   border: 3px solid white;
+}
+.btn6:hover{
+   background-color: white;
+   color: rgb(0, 0, 0);
+}
